--- a/lesson1/exercises/src/app/fav-photos/fav-photos.component.html
+++ b/lesson1/exercises/src/app/fav-photos/fav-photos.component.html
@@ -1,5 +1,5 @@
 <div class="photos">
-   <h3>{{photosTitle}}</h3>
+   <h3>{{favoritePics}}</h3>
    <img src="{{image1}}" alt="Oops! Missing photo!"> 
    <img src="" alt="Oops! Missing photo!">  <br>
    <img src="" alt="Oops! Missing photo!"> 
