--- a/orbit-report/src/app/orbit-list/orbit-list.component.html
+++ b/orbit-report/src/app/orbit-list/orbit-list.component.html
@@ -2,15 +2,15 @@
 <h3>Orbit Report</h3>
 <table>
     <tr class="header-row">
-        <th class = "sortable">Name</th>
-        <th class = "sortable">Type</th>
+        <th class = "sortable" (click)="sort">Name</th>
+        <th class = "sortable" (click)="sort">Type</th>
         <th>Operational</th>
         <th>Orbit Type</th>
         <th>Launch Date</th>
     </tr>
     <tr *ngFor = "let satellite of satellites">
-        <td class = "sortable">{{satellite.name}}</td>
-        <td class = "sortable">{{satellite.type}}</td>
+        <td class = "sortable" >{{satellite.name}}</td>
+        <td [class.warning] =" satellite.type === 'Space Debris' ">{{satellite.type}}</td>
         <td>{{satellite.operational}}</td>
         <td>{{satellite.orbitType}}</td>
         <td>{{satellite.launchDate}}</td> 
