--- a/orbit-report/src/app/app.component.html
+++ b/orbit-report/src/app/app.component.html
@@ -1,2 +1,4 @@
  
  <app-orbit-list [satellites]="sourceList"></app-orbit-list>
+ <div class="search-form"><button (click)= "search(searchTerm.value)">Search</button><input (keyup)= search(searchTerm.value)></div>
+ <!-- <app-orbit-list [satellites]="displayList"></app-orbit-list> -->
