--- a/orbit-report/src/app/orbit-list/orbit-list.component.html
+++ b/orbit-report/src/app/orbit-list/orbit-list.component.html
@@ -1,9 +1,9 @@
 
 <h3>Orbit Report</h3>
 <table>
-    <tr class="header-row">
-        <th class = "sortable" (click)="sort">Name</th>
-        <th class = "sortable" (click)="sort">Type</th>
+    <tr class="header-row" >
+        <th class = "sortable" (click) ="sort('name')">Name</th>
+        <th class = "sortable" (click)="sort('type')">Type</th>
         <th>Operational</th>
         <th>Orbit Type</th>
         <th>Launch Date</th>
@@ -12,7 +12,7 @@
         <td class = "sortable" >{{satellite.name}}</td>
         <td [class.warning] =" satellite.type === 'Space Debris' ">{{satellite.type}}</td>
         <td>{{satellite.operational}}</td>
-        <td>{{satellite.orbitType}}</td>
+        <td>{{satellite.orbitType}}</td> 
         <td>{{satellite.launchDate}}</td> 
     </tr>
 
